# ochip8

./: .gitignore  Makefile  README.md  chip8.opam  dune-project
.github/workflows/: test.yml
lib/: chip8.ml  dune
tests/: dune  test_decode.ml  test_instructions.ml
